# stable-diffusion-task

./: .gitignore  README.md  config.example.yml  config.yml  controlnet.py  controlnet_args.py  gen_image_args.py  gen_images.py  generate_json_schema.py  prefetch.py  prompt.py  pyproject.toml  requirements.txt  requirements_cuda.txt  requirements_macos.txt  start.py
data/: .gitignore
examples/: controlnet_preprocess.py  finetune_lora.py  reference_image.py  remove_background.py  rtx_5090_example.py  sd15.py  sd15_controlnet.py  sd15_controlnet_canny.py  sd15_controlnet_openpose.py  sd15_lcm.py  sd15_lcm_lora.py  sd15_lora.py  sd15_lora_controlnet.py  sd15_lora_downloaded.py  sd15_lora_not_exist.py  sd15_textual_inversion.py  sd15_with_cache.py  sdxl_base_refiner.py  sdxl_controlnet.py  sdxl_lcm.py  sdxl_lora.py  sdxl_lora_controlnet_refiner.py  sdxl_lora_hf.py  sdxl_turbo.py  sdxl_turbo_lora_civitai.py  sdxl_turbo_lora_controlnet.py  sdxl_turbo_lora_hf.py  tagger.py
inference_task_args/: task_args.py  types.py
inference_task_runner/: inference_task.py  prompt.py
schema/: stable-diffusion-finetune-lora-task.json  stable-diffusion-finetune-task.json  stable-diffusion-inference-task.json
sd_task/: __init__.py  config.py  download_model.py  prefetch.py  utils.py
sd_task/cache/: abc.py
sd_task/finetune_task_args/: __init__.py  lora_task_args.py
sd_task/finetune_task_runner/: __init__.py  fine_task.py
sd_task/inference_task_args/: controlnet_args.py  generate_json_schema.py  scheduler_args.py  task_args.py  types.py
sd_task/inference_task_runner/: errors.py  (+7 more)
(+33 files in other folders)
