[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sd_task"
authors = [{ name = "lukew", email = "lukew@crynux.ai" }]
description = "A general framework to define and execute the Stable Diffusion task."
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
version = "3.0.0"
dependencies = [
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "PyYAML",
    "annotated-types>=0.6.0",
    "Pillow",
    "controlnet-aux>=0.0.7",
    "mediapipe>=0.10.7",
    "diffusers>=0.21.2",
    "compel>=2.0.2",
    "torch>=1.4",
    "torchaudio",
    "torchvision",
    "validators>=0.22.0",
    "urllib3>=2.0.5",
    "tqdm>=4.66.1"
]

[tool.setuptools.packages.find]
include = ["sd_task*"]
